--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  	<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ArkanDash Site</title>
 
     <script src="https://cdn.jsdelivr.net/gh/kripken/ammo.js@HEAD/builds/ammo.wasm.js"></script>
-  </head>
-  <body>
-    <canvas id="bg"></canvas>
-    <script type="module" src="/main.js"></script>
-  </body>
+</head>
+	<body>
+		<canvas id="bg"></canvas>
+    	<script type="module" src="/main.js"></script>
+		<nav>
+			<div class="navbar">
+				<a href="index.html">Home</a>
+				<a href="about.html">About</a>
+			</div>
+			<div class="logo">
+				<titleLogo>ArkanDash</titleLogo>
+			</div>
+		</nav>
+
+		<textarea>sss</textarea>
+	</body>
 </html>
