--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ArkanDash Site</title>
+    <title>ArkanDash</title>
 
     <script src="https://cdn.jsdelivr.net/gh/kripken/ammo.js@HEAD/builds/ammo.wasm.js"></script>
 </head>
 	<body>
 		<canvas id="bg"></canvas>
     	<script type="module" src="/main.js"></script>
+		<textBox1>
+			<div class="box1">Klee</div>
+			<div class="boxContent1">Putri dari petualang Alice yang pemberani dan sering kali cukup merusak, Klee mengikuti ibunya dalam banyak hal, banyak yang membuat cemas Knights of Favonius yang dipercayakan kepadanya.</div>
+		</textBox1>
+		<textBox2>
+			<div class="box2">Personality</div>
+			<div class="boxContent2">Klee adalah seorang gadis energik dan keluar yang mengambil setelah ibunya, Alice. Dia memiliki bakat khusus untuk membuat bahan peledak dan tidak terpengaruh oleh suara ledakan. Dia memuja apa pun yang bisa meledak seperti bomnya, seperti Baron Bunny Amber. Dia bertingkah seperti anak muda yang energik dan suka bermain dengan teman-temannya. Sayangnya, definisi bermainnya biasanya melibatkan bahan peledak; dia sangat menyukai "ikan peledakan", melemparkan bom ke danau yang penuh dengan ikan. Sebagian karena usianya yang masih muda, Klee terkadang bisa sangat naif dan mudah bingung dengan topik yang tidak ada konteksnya, seperti salah mengira industri anggur Mondstadt sebagai monster, dan bertanya-tanya mengapa Diluc selalu pemarah, bahkan sampai memanggilnya "orang dewasa yang aneh". Meskipun dia dianggap sebagai anggota resmi Knights of Favonius, kejenakaan Klee sering membuatnya mendapat masalah. Seperti anak lainnya, dia sering mencoba melarikan diri untuk menghindari teguran, tetapi akhirnya ditangkap oleh Jean yang mengirimnya ke sel isolasi untuk introspeksi diri. Sementara dia kadang-kadang mencoba melakukannya, dia hampir selalu cepat lupa dan malah menggunakan waktu untuk bertukar pikiran tentang bom dan bahan peledak baru. Klee mencintai sesama ksatria, dan sangat dicintai oleh mereka pada gilirannya. Dia sangat menyukai Kaeya dan Albedo. Setiap kali dia pergi ke luar kota untuk bermain, dia selalu mengikuti "aturan bertahan hidup" yang diberikan Kaeya padanya. Albedo, di sisi lain, adalah sosok kakak laki-laki yang merawatnya. Dia mencintai orang tuanya, meskipun dia tidak melihat mereka sejak mereka meninggalkannya di bawah asuhan Knights of Favonius saat mereka bepergian.</div>
+		</textBox2>>
+		<textBox3>
+			<div class="box3">Appearance</div>
+			<div class="boxContent3">Klee adalah gadis kecil seperti peri dengan kulit pucat dan mata merah muda. Dia memiliki rambut pirang pucat yang diikat kuncir dengan cowlick dan telinga elf yang menonjol. Klee mengenakan mantel merah dengan hiasan merah gelap dan bentuk lubang kunci di ujungnya di atas gaun putih dan celana pendek, serta syal berbulu dengan pom-pom, sarung tangan, kaus kaki lutut, sepatu bot, dan tas kurir cokelat. Terlampir pada tas ini adalah Dodoco, pom-pom berbulu berbentuk binatang hutan yang dibuat oleh ibunya dan Pyro Vision-nya. Klee memakai topi newsboy merah yang cukup besar dengan pin yang menampilkan lencana semanggi dan dua bulu putih. Pakaiannya, Shooting Spark, digambarkan sebagai satu set pakaian untuk anak energik yang bahkan dilengkapi dengan ransel kulit yang serasi.</div>
+		</textBox3>
 		<nav>
 			<div class="navbar">
 				<a href="index.html">Home</a>
@@ -20,7 +32,5 @@
 				<titleLogo>ArkanDash</titleLogo>
 			</div>
 		</nav>
-
-		<textarea>sss</textarea>
 	</body>
 </html>
